--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <span>!</span>
     </div>
     <div class="description">
-        <span>No lo copee del yutub pero pa ti jaja</span>
+        <span>No lo copee del yutub pero haber si te gusta jaja</span>
     </div>
     <div class="button">
         <button class="botones">
